--- a/README
+++ b/README
@@ -54,6 +54,9 @@ Disclaimers
 ================================================================================
 History
 ================================================================================
+* Ver 1.02 ( 2009/12/17 )
+	+Added in new methods to perform wiki RPC calls.
+
 * Ver 1.01 ( 2009/12/15 )
 	+Intial public release.
 
